Fix aligning in Firefox

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
-.centered {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-25%, -75%);
-}
-
 * {
   font-family: 'VT323', monospace;
   font-size: 24px;
@@ -22,7 +15,9 @@ h2 {
 }
 
 .container {
-  display: table;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 600px;
   padding: 0px;
@@ -36,7 +31,8 @@ h2 {
 }
 
 .skillsDiv {
-  padding: 0% 20%;
+  padding: 0% 25%;
+  
 }
 
 .projectDiv {
